added class for fixed top to nav bar/ changed bar's brand name to forum2 and linked it back home

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,8 @@
  */
 // @import "bootstrap-sprockets";
 // @import "bootstrap";
+//variables
+@import "base/variables";
+
+//partials - main css files
+@import "partials/layout/*";
