--- a/app/assets/stylesheets/partials/layout/navigation.scss
+++ b/app/assets/stylesheets/partials/layout/navigation.scss
@@ -1,3 +1,5 @@
+// navbar
+
 .navbar-default, .navbar-toggle:focus, .collapsed, button.navbar-toggle {
   background: $navbarColor !important;
   border: none;
@@ -23,4 +25,40 @@ nav {
 }
 body {
   margin-top: 0;
+}
+
+// sessions/new.html.erb
+
+h2.text-center  {
+  font-size: 30;
+}
+input#user_email, #user_password {
+  width: 30%;
+  height: 35px;
+  margin: 10px 5px;
+  border: 1px black solid;
+}
+input#user_remember_me {
+  width: 2em;
+  // margin-left: 5px;
+  margin: 0 5px;
+  padding: 0;
+}
+label {
+  font-size: 22px;
+  margin-left: 8px;
+}
+input {
+  width: 30%;
+  text-align: center;
+  font-size: 12px;
+  height: 25px;
+  margin-top: 10px;
+  border: 1px black solid;
+}
+a {
+  font-size: 22px;
+  text-decoration: none;
+  color: black;
+  padding: 18px 5px;
 }
