installed bootstrap_form gem for cleaner looking forms

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,8 +12,8 @@
  *
 
  */
-// @import "bootstrap-sprockets";
-// @import "bootstrap";
+@import "bootstrap-sprockets";
+@import "bootstrap";
 //variables
 @import "base/variables";
 
