divided code for navbar into 2 sections, visible/on small screens, created 2 new partials to hold each half of the navbar html

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,8 @@
 @import "bootstrap";
 //variables
 @import "base/variables";
+//default styles
+@import "base/default";
 
 //partials - main css files
 @import "partials/*";
