cleared undefined variable error by entering correct path name in _collapsible partial

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,6 @@
 //partials - main css files
 @import "partials/*";
 @import "partials/layout/*";
+
+// media queries for a responsive design
+@import "responsive/*";
