--- a/app/views/layouts/navigation/_collapsible_elements.html.erb
+++ b/app/views/layouts/navigation/_collapsible_elements.html.erb
@@ -23,8 +23,8 @@
 
 
       <% else # user not signed it %>
-     <li ><%= link_to 'Login', login_path %></li>
-     <li ><%= link_to 'Signup', signup_path %></li>
+     <li ><%= link_to 'Signin', new_user_session_path %></li>
+     <li ><%= link_to 'Signup', new_user_registration_path %></li>
    <% end # if user is signed it %>
  </ul>
 </div><!-- navbar-collapse -->
