--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,7 @@
 
           <!-- collapses on smaller devises -->
       <div class="col-sm-5">
-        <%= render 'layouts/navigation/collapsible_elements'> %>
+        <%= render 'layouts/navigation/collapsible_elements' %>
       </div>
 
     </div>  <!-- /.row -->
