--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,8 +14,8 @@
       </p>
 
       <%= bootstrap_form_for(resource,
-                              :as resource_name,
-                              :url registration_path(resource_name)) do |f| %>
+                              as: resource_name,
+                              url: registration_path(resource_name)) do |f| %>
 
           <%= f.text_field :name,
                             placeholder: 'username (will be shown publicly)',
