--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <div class='container' id='sign-up-form'>
   <div class='row'>
 
-    <h1>Join our community and stop fighting alone.</h1>
+    <h1>Join our community and stop feeling alone.</h1>
     <h2>We're glad you're here.</h2>
 
     <div class='col-sm-offset-4 col-sm-4'>
