called on user factory, added and tested validation

--- a/app/assets/stylesheets/partials/signup.scss
+++ b/app/assets/stylesheets/partials/signup.scss
@@ -1,12 +1,10 @@
 #sign-up-form {
   margin-top: 100px;
   h1 {
-    font-size: 60px !important;
-    font-size: 6.0rem !important;
+    font-size: 45px !important;
+    font-size: 4.5rem ;
   }
   text-align: center;
   padding-bottom: 20px;
-  h1, h2, h3, p {
-    color: #585858;
-  }
+
 }
