--- a/app/assets/stylesheets/base/default.scss
+++ b/app/assets/stylesheets/base/default.scss
@@ -3,7 +3,7 @@
 }
 
 html {
-  font-size: 66.5%;
+  // font-size: 66.5%;
   background: url('http://backgroundcheckall.com/wp-content/uploads/2017/12/technical-background-images-for-websites-3.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -14,8 +14,8 @@ html {
 
 body {
   background: transparent;
-  font-size: 18px;
-  font-size: 1.8rem;
+  font-size: 20px;
+  font-size: 2.0rem;
 
 }
 
@@ -38,4 +38,9 @@ a:hover, a:active, a:link, a:visited {
 
 .control-label {
   display: none;
+}
+
+h2.text-center {
+  color: $bodyTextColor !important;
+  font-size: 35px;
 }
