--- a/app/assets/stylesheets/partials/layout/navigation.scss
+++ b/app/assets/stylesheets/partials/layout/navigation.scss
@@ -7,10 +7,17 @@
     color: white !important;
     font-size: 25px;
     margin-top: 80px;
+    margin-right: 0;
   }
   .col-sm-5, .col-sm-7 {
   padding: 0;
   }
+}
+a.navbar-brand {
+  font-size: 50px !important;
+  margin-top: 45px !important;
+  margin-left: -60px !important;
+  color: white;
 }
 nav {
   .navbar-header {
