fixed Sass on sign-up-form

--- a/app/assets/stylesheets/base/default.scss
+++ b/app/assets/stylesheets/base/default.scss
@@ -36,11 +36,12 @@ a:hover, a:active, a:link, a:visited {
   text-decoration: none;
 }
 
-.control-label {
-  display: none;
-}
-
-h2.text-center {
-  color: $bodyTextColor !important;
-  font-size: 35px;
-}
+// .control-label {
+//   display: none;
+// }
+//
+// h2.text-center {
+//   color: $bodyTextColor !important;
+//   font-size: 35px;
+//
+// }
