--- a/app/assets/stylesheets/partials/layout/signin.scss
+++ b/app/assets/stylesheets/partials/layout/signin.scss
@@ -6,6 +6,7 @@ form#new_user.new_user {
   }
 
   h2.text-center {
+    font-family: 'Raleway', sans-serif;
     color: $bodyTextColor !important;
     font-size: 35px;
     margin-top: 60px !important;
