--- a/app/assets/stylesheets/partials/signup.scss
+++ b/app/assets/stylesheets/partials/signup.scss
@@ -1,6 +1,16 @@
+// #boxtop {
+//   width: 970px;
+//   height: 132px;
+//   background-color: #9f0309;
+//   opacity: .6;
+//   position: absolute;
+//   margin-left: 50%;
+// }
+
 #sign-up-form {
   margin-top: 100px;
   h1 {
+    font-family: 'Raleway', sans-serif;
     font-size: 60px !important;
     font-size: 6.0rem !important;
   }
