--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,8 +2,12 @@
 <div class='container' id='sign-up-form'>
   <div class='row'>
 
-    <h1>Join our community and stop feeling alone.</h1>
-    <h2>We're glad you're here.</h2>
+    <div id="topbox">
+      <h1>Join our community and stop feeling alone.</h1>
+    </div>
+
+
+      <h2>We're glad you're here.</h2>
 
     <div class='col-sm-offset-4 col-sm-4'>
       <h3>Register</h3>
