--- a/app/assets/stylesheets/base/default.scss
+++ b/app/assets/stylesheets/base/default.scss
@@ -1,13 +1,4 @@
 
-// @font-face {
-//     font-family: 'Quicksand';
-//     src: url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700') format('truetype');
-// }
-
-// @font-face {
-//     font-family: 'Railway';
-//     src: url('https://fonts.googleapis.com/css?family=Raleway') format('truetype');
-// }
 
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
@@ -19,16 +10,6 @@
   box-sizing: border-box;
 }
 
-// html {
-//   // font-size: 66.5%;
-//   // background: url('http://backgroundcheckall.com/wp-content/uploads/2017/12/technical-background-images-for-websites-3.jpg') no-repeat center center fixed;
-//   -webkit-background-size: cover;
-//   -moz-background-size: cover;
-//   -o-background-size: cover;
-//   background-size: cover;
-//
-// }
-
 body {
   background: transparent;
   background: url("ink.jpg") no-repeat center center fixed;
@@ -38,13 +19,11 @@ body {
   background-size: cover;
   font-size: 20px;
   font-size: 2.0rem;
+  font-family: 'Raleway', sans-serif;
 
 }
 
-h1 {
-  font-size: 28px;
-  font-size: 2.8rem;
-}
+
 
 i {
   width: 26px;
@@ -62,8 +41,3 @@ a:hover, a:active, a:link, a:visited {
 //   display: none;
 // }
 //
-// h2.text-center {
-//   color: $bodyTextColor !important;
-//   font-size: 35px;
-//
-// }
