--- a/app/assets/stylesheets/partials/layout/navigation.scss
+++ b/app/assets/stylesheets/partials/layout/navigation.scss
@@ -5,6 +5,7 @@
   opacity: 0.9;
   border: none;
   a {
+    font-family: 'Quicksand', sans-serif;
     color: white !important;
     font-size: 25px;
     margin-top: 80px;
@@ -24,7 +25,7 @@ nav {
   .navbar-header {
     width: 100%;
     height: 125px;
-    button, .navbar-brand {
+    button {
       transition: opacity 0.15s;
       font-size: 40px;
     }
