--- a/app/assets/stylesheets/partials/signup.scss
+++ b/app/assets/stylesheets/partials/signup.scss
@@ -2,18 +2,31 @@
 //   width: 970px;
 //   height: 132px;
 //   background-color: #9f0309;
-//   opacity: .6;
-//   position: absolute;
-//   margin-left: 50%;
+//   // opacity: .6;
+//   text-align: center;
 // }
 
 #sign-up-form {
   margin-top: 100px;
   h1 {
     font-family: 'Raleway', sans-serif;
-    font-size: 60px !important;
-    font-size: 6.0rem !important;
+    font-size: 55px !important;
+    font-size: 5.5rem !important;
+    background-color: white;
+    opacity: 0.7;
+    color: #9f0309;
+    border-radius: 25px;
+    width: 1100px;
+  }
+  h2 {
+    font-family: 'Raleway', sans-serif;
+    background-color: white;
+    opacity: 0.7;
+    color: #9f0309;
+    border-radius: 25px;
+    font-size: 50px;
+    width: 560px;
   }
   text-align: center;
-  padding-bottom: 20px;
+  // padding-bottom: 20px;
 }
